--- a/style/style.css
+++ b/style/style.css
@@ -35,6 +35,7 @@ body {
     background-color: #fff;
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
     overflow: hidden;
+    opacity: 0.8;
 }
 
 .app-panel {
