--- a/style/style.css
+++ b/style/style.css
@@ -27,10 +27,9 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
+    background-color:  rgb(255, 255, 255, 0.9)
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-    opacity: 0.8;
 }
 
 .app-panel {
@@ -40,8 +39,17 @@ body {
     padding: 100px;
 }
 
+.map-panel {
+    width: 90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+}
+
 #map {
-    opacity: 1;
     width: 100%;
     height: 400px;
     background-color: grey;
