--- a/style/style.css
+++ b/style/style.css
@@ -27,9 +27,10 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color:  rgb(255, 255, 255, 0.9)
+    background-color: #fff;
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
     overflow: hidden;
+    opacity: 0.9;
 }
 
 .app-panel {
@@ -40,7 +41,7 @@ body {
 }
 
 .map-panel {
-    width: 90%;
+    width: 55%;
     position: absolute;
     top: 50%;
     left: 50%;
