--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
 .map-panel {
     width: 55%;
     position: absolute;
-    top: 50%;
+    top: 57%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
@@ -54,4 +54,46 @@ body {
     width: 100%;
     height: 400px;
     background-color: grey;
+  }
+
+
+/*****************************/
+/*        INPUT FIELD        */ 
+/*****************************/
+
+.input-wrapper {
+    width: 35%;
+    position: absolute;
+    top: 22%;
+    left: 57%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+/* label color */
+.input-field label {
+    color: #000;
+  }
+  /* label focus color */
+  .input-field input[type=text]:focus + label {
+    color: #000;
+  }
+  /* label underline focus color */
+  .input-field input[type=text]:focus {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+  }
+  /* valid color */
+  .input-field input[type=text].valid {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+  }
+  /* invalid color */
+  .input-field input[type=text].invalid {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+  }
+  /* icon prefix focus color */
+  .input-field .prefix.active {
+    color: #000;
   }
