--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,26 @@ body {
     z-index: 2;
 }
 
+button {
+    width: 5%;
+    height: 5%;
+    position: absolute;
+    top: 19%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 32px;
+    margin: 4px 2px;
+    cursor: pointer;
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+}
+
 /* label color */
 .input-field label {
     color: #000;
